--- a/filter/Cargo.toml
+++ b/filter/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 bincode = "1.3.3"
 kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
+rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
