--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Replace 'the' with 'AAA'",
+  "name": "Filter our Stupidity",
   "version": "1.0",
   "permissions": [
     "activeTab",
