--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://*.twitter.com/*"],
       "js": ["contentScript.js"],
       "run_at": "document_end"
     }
