--- a/filter/Cargo.toml
+++ b/filter/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0"
 bincode = "1.3.3"
 kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
 lazy_static = "1.4.0"
-llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "develop"}
+llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "master"}
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
