--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,6 +2,11 @@
   "manifest_version": 3,
   "name": "Filter out Stupidity",
   "version": "1.0",
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "permissions": [
     "activeTab",
     "scripting"
