--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,8 @@
   },
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting", 
+    "storage"
   ],
   "host_permissions": [
     "http://localhost:8080/filter:filter:template.os/*"
