--- a/pkg/manifest.json
+++ b/pkg/manifest.json
@@ -1,6 +1,6 @@
 [
     {
-        "process_name": "filter",
+        "process_name": "main",
         "process_wasm_path": "/filter.wasm",
         "on_exit": "Restart",
         "request_networking": true,
